toned down blurred status filter so it's no longer grayscale

--- a/styles/packages/tool-bar.less
+++ b/styles/packages/tool-bar.less
@@ -90,10 +90,10 @@
 .tinted-tab-bar .is-blurred .tool-bar {
     &.tool-bar-vertical {
         .tool-bar-btn:first-child {
-            -webkit-filter: grayscale(1) brightness(1.25);
+            -webkit-filter: grayscale(0.65) brightness(1.25);
         }
     }
     &.tool-bar-top {
-        -webkit-filter: grayscale(1) brightness(1.25);
+        -webkit-filter: grayscale(0.65) brightness(1.25);
     }
 }
