--- a/styles/tabs.less
+++ b/styles/tabs.less
@@ -217,5 +217,5 @@
     }
 }
 .tinted-tab-bar .is-blurred .tab-bar:not([data-reactid]) {
-    -webkit-filter: grayscale(1) brightness(1.25);
+    -webkit-filter: grayscale(0.65) brightness(1.25);
 }
