--- a/styles/tree-view.less
+++ b/styles/tree-view.less
@@ -83,7 +83,7 @@
 .tinted-tab-bar, .tinted-tab-bar.panel-contrast {
     .is-blurred .tree-view {
         .project-root > .header, .project-root > .header.selected {
-            -webkit-filter: grayscale(1) brightness(1.25);
+            -webkit-filter: grayscale(0.65) brightness(1.25);
         }
     }
     .tree-view {
@@ -113,5 +113,5 @@
     z-index: 100;
 }
 .is-blurred .tree-view > li.tabBlender {
-    -webkit-filter: grayscale(1) brightness(1.25);
+    -webkit-filter: grayscale(0.65) brightness(1.25);
 }
